# dummyExampleCPP

./: .gitignore  CMakeLists.txt  ExampleA.cc  ExampleB.cc  README
cmakeModules/: FindROOT.cmake
include/: ExampleData.h
include/exampleA/: Detector.h  Hit.h  Track.h
src/exampleA/: Detector.cc  Hit.cc  Track.cc
